x11proto-gl (1.4.14-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2011 00:55:09 +0200

x11proto-gl (1.4.12-1) unstable; urgency=low

  [ Robert Hooker ]
  * New upstream release.

  [ Cyril Brulebois ]
  * Remove ChangeLog from .gitignore, and update it.
  * Add pkg-config build-dep.
  * Update debian/copyright.
  * Switch from --list-missing to --fail-missing for additional safety.
  * Add myself to Uploaders.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 03 Nov 2010 21:26:15 +0100

x11proto-gl (1.4.11-1) unstable; urgency=low

  [ Julien Cristau ]
  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!

  [ Brice Goglin ]
  * New upstream release, closes: #570045.
  * Bump xutils-dev build-dep to 1:7.5~1 for util-macros 1.3.0.

 -- Brice Goglin <bgoglin@debian.org>  Tue, 16 Feb 2010 07:24:20 +0100

x11proto-gl (1.4.10-1) unstable; urgency=low

  * All the code under the GLX Public License has been made available under
    the SGI Free Software License B, so remove GLXPL from debian/copyright.
  * New upstream release.
  * Run autoreconf on build.
  * Drop XS- prefix from Vcs fields in debian/control.
  * Add README.source, bump Standards-Version to 3.8.1.
  * Remove Branden from Uploaders.

 -- Julien Cristau <jcristau@debian.org>  Mon, 08 Jun 2009 17:30:57 +0200

x11proto-gl (1.4.9-2) unstable; urgency=low

  * Update debian/copyright to the SGI Free Software License B, version 2.0.
    It now mirrors the free X11 license used by X.Org.
    http://www.sgi.com/company_info/newsroom/press_releases/2008/september/opengl.html
    Not closing bug#368559 for now, because glxint.h is covered by the GLX
    Public License, which is still not free.

 -- Julien Cristau <jcristau@debian.org>  Sat, 20 Sep 2008 16:16:21 +0200

x11proto-gl (1.4.9-1) unstable; urgency=low

  [ Brice Goglin ]
  * Update the long description.
  * Add URL in debian/copyright.