@@ -1,6 +1,10 @@
 x11proto-gl (1.4.14-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Switch to dh:
+    - Bump debhelper build-dep and compat to 8.
+    - Use dh-autoreconf and quilt sequences, rewrite rules file.
+    - Add placeholder quilt series file.
 
  -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2011 00:55:09 +0200
 
